Added dedicated saving button to logging demo.

--- a/logging-demo/index.html
+++ b/logging-demo/index.html
@@ -12,6 +12,7 @@
 	</div>
 	<div>
 		<button id="log-button">Log</button>
+		<button id="save-button">Save Log</button>
 	</div>
 	<div>
 		<label for="encoding">Format: </label>
@@ -24,8 +25,9 @@
 		<input id="compression" type="checkbox" checked="checked">
 		<label for="compression"> DEFLATE Compression</label>
 	</div>
-<script type="text/javascript" src="logging-demo.js"></script>
-<script type="text/javascript" src="../tinylog.min.js"></script>
-<script type="text/javascript" src="../encoders/deflate.tinylog.min.js"></script>
+	
+	<script type="text/javascript" src="logging-demo.js"></script>
+	<script type="text/javascript" src="../tinylog.min.js"></script>
+	<script type="text/javascript" src="../encoders/deflate.tinylog.min.js"></script>
 </body>
 </html>
