--- a/viewer/index.html
+++ b/viewer/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8" />
 	<title>tinylog viewer</title>
-	<link rel="stylesheet" type="text/css" href="../themes/default.tinylog.css" />
-	<link rel="stylesheet" type="text/css" href="tinylog-viewer.css" />
+	<link rel="stylesheet" type="text/css" href="../themes/default.tinylog.css" title="tinylog" />
+	<link rel="stylesheet" type="text/css" href="tinylog-viewer.css" title="tinylog viewer" />
 </head>
 <body>
 	<div id="main">
@@ -15,8 +15,13 @@
 			<span id="viewlog">view log</span>
 		</div>
 	</div>
+	<script type="text/javascript">
+	if (self.console) {
+		console.TINYLOG = true;
+	}
+	</script>
 	<script type="text/javascript" src="../tinylog.min.js"></script>
 	<script type="text/javascript" src="../decoders/inflate.tinylog.min.js"></script>
-	<script type="text/javascript" src="viewer.tinylog.js"></script>
+	<script type="text/javascript" src="tinylog-viewer.js"></script>
 </body>
 </html>
