Removing title from tinylog theme inclusions as it can cause problems with alternative stylesheets.

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>tinylog viewer</title>
-	<link rel="stylesheet" type="text/css" href="../themes/default.tinylog.css" title="tinylog" />
+	<link rel="stylesheet" type="text/css" href="../themes/default.tinylog.css" />
 	<link rel="stylesheet" type="text/css" href="tinylog-viewer.css" title="tinylog viewer" />
 </head>
 <body>
