--- a/logging-demo/index.html
+++ b/logging-demo/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>tinylog logging demo</title>
-<link rel="stylesheet" type="text/css" href="../themes/default.tinylog.css" title="tinylog" />
+<link rel="stylesheet" type="text/css" href="../themes/default.tinylog.css" />
 </head>
 <body>
 	<div>
